<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_live_tv"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/favorite" />

</menu>